# libusb-cmake

./: CMakeLists.txt  README.md
.github/workflows/: Linux-Clang.yml  Linux-GCC.yml  Windows-MSVC.yml  Windows-MinGW.yml  macOS.yml
cmake/: GetCMakeMM.cmake
test/: CMakeLists.txt
